<resources>
    <string name="app_name">GitHub</string>
    <string name="name">ADRIAN PANDELICA</string>
    <string name="employee">Android</string>
    <string name="location"><u>Bucharest</u></string>
    <string name="description"> “Train yourself to let go of everything you fear to lose.”
        “Fear is the path to the dark side. Fear leads to anger. Anger leads to hate. Hate leads to suffering.“
        “Death is a natural part of life. Rejoice for those around you who transform into the Force. Mourn them do not. Miss them do not. Attachment leads to jealously. The shadow of greed, that is.“
        “Always pass on what you have learned.”
        “Yes, a Jedi’s strength flows from the Force. But beware of the dark side. Anger, fear, aggression; the dark side of the Force are they. Easily they flow, quick to join you in a fight. If once you start down the dark path, forever will it dominate your destiny, consume you it will, as it did Obi-Wan’s apprentice.”
    </string>
    <string name="created"><u>Thu</u>, <u>May</u> <u>26</u>, <u>2015</u></string>
    <string name="updated"><u>Wed</u>, <u>Jun</u> <u>03</u>, <u>2016</u></string>
    <string name="email"><u>adrian.pandelica95@gmail.com</u></string>
    <string name="public_repo"><u>0</u></string>
    <string name="private_repo"><u>0</u></string>
    <string name="description_elem">Description</string>
    <string name="public_check">public</string>
    <string name="name_owner">%1$s , %2$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="bio">Bio</string>
    <string name="location_profile">Location</string>
    <string name="email_profile">Email</string>
    <string name="created_profile">Created</string>
    <string name="updated_profile">Updated</string>
    <string name="public_repos">Public Repos</string>
    <string name="private_repos">Private Repos</string>
    <string name="view_blog">View Blog</string>
    <string name="repo_number">18</string>
    <string name="logout">Logout</string>
</resources>
