<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/very_small_margin"
        android:layout_marginLeft="@dimen/very_small_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/very_small_margin"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/medium_size"
                android:layout_height="@dimen/medium_size"
                android:src="@mipmap/profil" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/very_small_margin"
                android:layout_marginLeft="@dimen/very_small_margin"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_text"
                    android:id="@+id/name"
                    android:text="@string/name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/employee"
                    android:text="@string/employee"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_small_margin"
            android:layout_marginBottom="@dimen/very_small_margin"
            android:textSize="@dimen/medium_text"
            android:text="@string/bio"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_size"
            android:ellipsize="end"
            android:id="@+id/description"
            android:text="@string/description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/very_small_margin"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/small_margin"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="@string/location_profile"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:id="@+id/location"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_text"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/very_small_margin"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/very_small_margin"
            android:weightSum="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="@string/email_profile"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/email"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_text"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/very_small_margin"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/very_small_margin"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="@string/created_profile"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:id="@+id/created"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_text"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/very_small_margin"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/very_small_margin"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="@string/updated_profile"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/updated"
                android:id="@+id/updated"
                android:textSize="@dimen/medium_text"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/very_small_margin"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/very_small_margin"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="@string/public_repos"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/public_repo"
                android:id="@+id/public_repo"
                android:textSize="@dimen/medium_text"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/very_small_margin"
            android:layout_marginLeft="@dimen/very_small_margin"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/very_small_margin"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:text="@string/private_repos"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:layout_gravity="start"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_repo"
                android:id="@+id/private_repo"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_text"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_gravity="end"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/blog_button"
        android:layout_width="match_parent"
        android:layout_marginEnd="@dimen/very_small_margin"
        android:layout_marginStart="@dimen/very_small_margin"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:text="@string/view_blog"
        android:gravity="center"
        android:drawableLeft="@mipmap/internet"/>
</RelativeLayout>