<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adrian.workshop1.PrimulActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/medium_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_size"
        android:weightSum="4">
        <View
            android:layout_width="@dimen/no_size"
            android:layout_height="@dimen/no_size"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/username_text"
            android:layout_width="@dimen/no_size"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_size"
        android:weightSum="4">
        <View
            android:layout_width="@dimen/no_size"
            android:layout_height="@dimen/no_size"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/password_text"
            android:layout_width="@dimen/no_size"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/small_size"/>
</LinearLayout>
